package pattern_examples.adapter_pattern_example;

public class RasterGraphics {
    void drawRasterLine() {
        System.out.println("draw line");
    }

    void drawRasterSquare() {
        System.out.println("draw square");
    }
}
