package pattern_examples.adapter_pattern_example;

public interface VectroGraphicsInterface {
    void drawLine();

    void drawSquare();
}
