@startuml

title __ADAPTER_PATTERN_EXAMPLE's Class Diagram__\n

  namespace pattern_examples.adapter_pattern_example {
    class pattern_examples.adapter_pattern_example.Main {
        {static} + main()
    }
  }
  

  namespace pattern_examples.adapter_pattern_example {
    class pattern_examples.adapter_pattern_example.RasterGraphics {
        ~ drawRasterLine()
        ~ drawRasterSquare()
    }
  }
  

  namespace pattern_examples.adapter_pattern_example {
    class pattern_examples.adapter_pattern_example.VectorAdapterFromRaster {
        + drawLine()
        + drawSquare()
    }
  }
  

  namespace pattern_examples.adapter_pattern_example {
    class pattern_examples.adapter_pattern_example.VectorAdapterFromRaster2 {
        + VectorAdapterFromRaster2()
        + drawLine()
        + drawSquare()
    }
  }
  

  namespace pattern_examples.adapter_pattern_example {
    interface pattern_examples.adapter_pattern_example.VectroGraphicsInterface {
        {abstract} + drawLine()
        {abstract} + drawSquare()
    }
  }
  

  pattern_examples.adapter_pattern_example.VectorAdapterFromRaster .up.|> pattern_examples.adapter_pattern_example.VectroGraphicsInterface
  pattern_examples.adapter_pattern_example.VectorAdapterFromRaster -up-|> pattern_examples.adapter_pattern_example.RasterGraphics
  pattern_examples.adapter_pattern_example.VectorAdapterFromRaster2 .up.|> pattern_examples.adapter_pattern_example.VectroGraphicsInterface
  pattern_examples.adapter_pattern_example.VectorAdapterFromRaster2 o-- pattern_examples.adapter_pattern_example.RasterGraphics : rasterGraphics


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
